2003-06-19  William Jon McCann  <mccann@jhu.edu>

	* statusbar.c (gnobots_statusbar_new): Decrease spacing
	between status bar items since we no longer need room for a
	GTK separator.

	* main.c: 
	* properties.h: 
	* properties.c: Initial conversion to gconf.

	* keyboard.c (keyboard_string): Use gdk_keyval_name for
	num to name mapping.  When we verify that nothing else
	uses keylabels.h it can be removed.
	(keyboard_preferred): Use gdk_keyval_to_upper to convert
	case.

2003-06-18  William Jon McCann  <mccann@jhu.edu>

	* properties.c (show_properties_dialog): Clean up preferences
	dialog layout.

	* keyboard.c: 
	* keyboard.h: 
	* sound.c: 
	* sound.h: 
	* game.c: 
	* graphics.c: 
	* graphics.h: 
	* menu.c: 
	* menu.h: 
	* gameconfig.c: 
	* gameconfig.h: 
	* gnobots.c: 
	* statusbar.h: 
	* statusbar.c: Fixed compiler warnings.

2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c: Removed all the "Are you sure questions".

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c: i18n fixes from Christian Neumair (bug #114875).

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-05-30 Callum McKenzie <callum@physics.otago.ac.nz>

	* help/.cvsignore:
	* help/C/.cvsignore:
	* help/da/.cvsignore:
	* help/es/.cvsignore:
	* help/it/.cvsignore: Added (got lost in the shuffle).

2002-12-11  Ross Burton  <ross@burtonini.com>

	* help/C/gnobots2.xml
	* menu.c: 
	* properties.c:
	* gnobots2.soundlist.in:
	* gnobots2.desktop.in: Rename game to "GNOME Robots"

2002-11-27  Ross Burton  <ross@burtonini.com>

	* menu.c: 
	* gnobots.c: 
	* graphics.c: s/Gnome/GNOME/, for #99683.

2002-11-19  Jeremy Browne  <jeremy@synonymous.ca>
